# clearsar-rfi-detection

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
assets/: ATTRIBUTION.txt
docs/: REVIEWER_RESPONSE.md  clearsar_abstract_2p.tex  clearsar_paper.tex
scripts/: coco2yolo.py  ensemble_wbf.py  eval_coco.py  nwd_loss_patch.py  predict_test.py  predict_val.py  preprocess_clahe.py  train_yolo.py  verify_ablation.py
